--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <head>
   <meta charset="utf-8">
   <title>Pedro's Personal Site</title>
-  <link rel="stylesheet" href="C:\Users\pedro\Desktop\Complete Web Development Bootcamps\Web Development\css\styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
