--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </tr>
   </table>
   <hr>
-  <strong> <a href="hobbies.html">My hobbies</a></strong>
+  <strong> <a href="Hobbies.html">My hobbies</a></strong>
   <br>
   <hr>
   <strong><a href="ContactDetails.html">Contact Details</a></strong>
